[gd_scene load_steps=3 format=3 uid="uid://cki60kj6t7yuh"]

[ext_resource type="Script" uid="uid://cgu0yf43y3tnw" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://u5x8f2ivapy7" path="res://scenes/level0.tscn" id="2_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="LevelHolder" type="Node2D" parent="."]

[node name="Level0" parent="LevelHolder" instance=ExtResource("2_sugp2")]

[node name="MenuHolder" type="Control" parent="."]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -200.0
offset_right = 489.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
